fixed some bugs of the routing-updater service